--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
   <header>
-    <h1>Nasi Kuning Lezat</h1>
+    <h1>Nasi Kuning Ibu shoimah Lezat</h1>
   </header>
   <main>
     <div class="product-section">
@@ -128,7 +128,7 @@
         <img src="https://images.unsplash.com/photo-1604908813246-9ff5f8c3a4bf?auto=format&fit=crop&w=600&q=80" alt="Sepiring nasi kuning lengkap dengan lauk dan sayuran segar" />
       </div>
       <div class="product-details">
-        <h2>Jual Nasi Kuning Tradisional</h2>
+        <h2>Jual Nasi Kuning khas rumahan</h2>
         <p>
           Nikmati kelezatan nasi kuning asli, dimasak dengan rempah pilihan yang harum dan cita rasa yang menggugah selera.
           Cocok untuk sarapan, makan siang, atau acara spesial keluarga Anda.
@@ -137,24 +137,24 @@
     </div>
     <section class="info-section">
       <h3>Alamat</h3>
-      <p>Jl. Mawar No. 123, Jakarta Selatan, DKI Jakarta, Indonesia</p>
+      <p>Desa tukmudal, Kec. Sumber, Kabupaten Cirebon, Jawa Barat patokan nya gang roket chiken sumber masuk terus.</p>
     </section>
     <section class="info-section">
       <h3>Jam Buka</h3>
-      <p>Senin - Sabtu: 07.00 - 15.00 WIB</p>
+      <p>Senin - Jum'at: 05.00 - 08.00 WIB</p>
       <p>Minggu: Libur</p>
     </section>
     <section class="info-section">
       <h3>Terima Jasa Masakan / Catering</h3>
       <p>Kami melayani jasa masakan dan catering untuk berbagai acara seperti arisan, ulang tahun, dan acara kantor.</p>
-      <p>Hubungi kami di <a href="tel:+628123456789" style="color:#422e00; font-weight:700; text-decoration: underline;">+62 812-3456-789</a> untuk pemesanan dan info lebih lanjut.</p>
+      <p>Hubungi kami di <a href="tel:+62 895-3774-12271" style="color:#422e00; font-weight:700; text-decoration: underline;">+62 895-3774-12271</a> untuk pemesanan dan info lebih lanjut.</p>
     </section>
     <div class="catering-note" role="note">
-      Pesan Nasi Kuning untuk acara spesial Anda dengan layanan catering kami yang terpercaya!
+      Pesan Nasi Kuning atau nasi kotak untuk acara spesial Anda dengan layanan catering kami yang terpercaya!
     </div>
   </main>
   <footer>
-    &copy; 2024 Nasi Kuning Lezat. Semua hak dilindungi.
+    &copy; 2025 Nasi Kuning Lezat Mamah shoimah. Semua hak dilindungi.
   </footer>
 </body>
 </html>
