--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <main>
     <div class="product-section">
       <div class="product-image" aria-label="Gambar Nasi Kuning">
-        <img src="https://images.unsplash.com/photo-1604908813246-9ff5f8c3a4bf?auto=format&fit=crop&w=600&q=80" alt="Sepiring nasi kuning lengkap dengan lauk dan sayuran segar" />
+        <img src="nasi-kuning.jpg" alt="Sepiring nasi kuning lengkap dengan lauk dan sayuran segar" />
       </div>
       <div class="product-details">
         <h2>Jual Nasi Kuning khas rumahan</h2>
@@ -141,7 +141,7 @@
     </section>
     <section class="info-section">
       <h3>Jam Buka</h3>
-      <p>Senin - Jum'at: 05.00 - 08.00 WIB</p>
+      <p>Senin - sabtu: 05.00 - 08.00 WIB</p>
       <p>Minggu: Libur</p>
     </section>
     <section class="info-section">
@@ -150,7 +150,7 @@
       <p>Hubungi kami di <a href="tel:+62 895-3774-12271" style="color:#422e00; font-weight:700; text-decoration: underline;">+62 895-3774-12271</a> untuk pemesanan dan info lebih lanjut.</p>
     </section>
     <div class="catering-note" role="note">
-      Pesan Nasi Kuning atau nasi kotak untuk acara spesial Anda dengan layanan catering kami yang terpercaya!
+      Pesan Nasi Kuning atau nasi kotak untuk acara spesial Anda dengan layanan catering kami yang terpercaya dan jangan lupa sarapan di warung nasi ibu shoimah
     </div>
   </main>
   <footer>
